gcc/testsuite/g++.dg/cpp0x/pr84585.C
// { dg-do compile { target c++11 } }

template <typename a> void b() {[](auto = template <;{a c(auto){}}}  // { dg-error "" }
